Update with student names: Alexander Le and Julian Yang, UC Berkeley Math Department

--- a/LaTeX_Template.tex
+++ b/LaTeX_Template.tex
@@ -9,9 +9,9 @@
 
 \title{Adaptive Wave Model for Option Pricing:\\
 A Comparison with the Black-Scholes Model}
-\author{Student 1 Name \and Student 2 Name\\
-\small University Name\\
-\small Department Name}
+\author{Alexander Le \and Julian Yang\\
+\small University of California, Berkeley\\
+\small Department of Mathematics}
 \date{\today}
 
 \begin{document}
