Add student names to notebook template

--- a/Student_Project_Template.ipynb
+++ b/Student_Project_Template.ipynb
@@ -7,6 +7,9 @@
         "# Adaptive Wave Model for Option Pricing: Comparison with Black-Scholes\n",
         "\n",
         "**Student Project**  \n",
+        "Alexander Le & Julian Yang  \n",
+        "University of California, Berkeley - Department of Mathematics\n",
+        "\n",
         "Based on: \"Adaptive–Wave Alternative for the Black–Scholes Option Pricing Model\"  \n",
         "arXiv:0911.1834v1 [q-fin.PR] 10 Nov 2009\n",
         "\n",
