Add yfinance integration for real market data testing

--- a/Student_Project_Template.ipynb
+++ b/Student_Project_Template.ipynb
@@ -363,6 +363,181 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Part 6: Real Market Data Testing with yfinance\n",
+        "\n",
+        "Test the models against real option prices from the market using yfinance.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Import market data functions\n",
+        "from market_data import (\n",
+        "    get_stock_data,\n",
+        "    get_option_chain,\n",
+        "    get_current_price,\n",
+        "    get_risk_free_rate,\n",
+        "    get_historical_volatility,\n",
+        "    prepare_option_data_for_comparison,\n",
+        "    compare_with_black_scholes,\n",
+        "    compare_with_nls_model,\n",
+        "    plot_comparison_results\n",
+        ")\n",
+        "\n",
+        "print(\"Market data functions loaded successfully\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Test with a popular stock (e.g., AAPL, MSFT, SPY)\n",
+        "ticker = \"AAPL\"  # Change to any ticker you want to test\n",
+        "\n",
+        "print(f\"Fetching data for {ticker}...\")\n",
+        "stock = get_stock_data(ticker)\n",
+        "current_price = get_current_price(ticker)\n",
+        "risk_free_rate = get_risk_free_rate()\n",
+        "volatility = get_historical_volatility(ticker)\n",
+        "\n",
+        "print(f\"\\nCurrent Price: ${current_price:.2f}\")\n",
+        "print(f\"Risk-Free Rate: {risk_free_rate*100:.2f}%\")\n",
+        "print(f\"Historical Volatility: {volatility*100:.2f}%\")\n",
+        "\n",
+        "# Get available expiration dates\n",
+        "try:\n",
+        "    exp_dates = stock.options[:5]  # Show first 5 expiration dates\n",
+        "    print(f\"\\nAvailable expiration dates: {exp_dates}\")\n",
+        "except Exception as e:\n",
+        "    print(f\"Error fetching option dates: {e}\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Compare Black-Scholes with market prices\n",
+        "print(\"Comparing Black-Scholes with market prices...\")\n",
+        "bs_comparison = compare_with_black_scholes(ticker, option_type='call')\n",
+        "\n",
+        "if len(bs_comparison) > 0:\n",
+        "    print(f\"\\nFound {len(bs_comparison)} valid call options\")\n",
+        "    print(f\"\\nBlack-Scholes Error Statistics:\")\n",
+        "    print(f\"  Mean Error: ${bs_comparison['bsError'].mean():.4f}\")\n",
+        "    print(f\"  Mean Absolute Error: ${bs_comparison['bsError'].abs().mean():.4f}\")\n",
+        "    print(f\"  Root Mean Squared Error: ${np.sqrt((bs_comparison['bsError']**2).mean()):.4f}\")\n",
+        "    print(f\"  Mean Percentage Error: {bs_comparison['bsErrorPct'].mean():.2f}%\")\n",
+        "    \n",
+        "    # Plot results\n",
+        "    fig = plot_comparison_results(bs_comparison, title=f\"{ticker} Call Options: Black-Scholes Comparison\")\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print(\"No valid options found for comparison\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Compare NLS model with market prices\n",
+        "print(\"Comparing NLS model with market prices...\")\n",
+        "nls_comparison = compare_with_nls_model(\n",
+        "    ticker, \n",
+        "    option_type='call',\n",
+        "    solution_type='shock_wave',\n",
+        "    beta=None,  # Will use risk-free rate\n",
+        "    k=1.2\n",
+        ")\n",
+        "\n",
+        "if len(nls_comparison) > 0:\n",
+        "    print(f\"\\nFound {len(nls_comparison)} valid call options\")\n",
+        "    print(f\"\\nNLS Model Error Statistics:\")\n",
+        "    print(f\"  Mean Error: ${nls_comparison['nlsError'].mean():.4f}\")\n",
+        "    print(f\"  Mean Absolute Error: ${nls_comparison['nlsError'].abs().mean():.4f}\")\n",
+        "    print(f\"  Root Mean Squared Error: ${np.sqrt((nls_comparison['nlsError']**2).mean()):.4f}\")\n",
+        "    print(f\"  Mean Percentage Error: {nls_comparison['nlsErrorPct'].mean():.2f}%\")\n",
+        "    \n",
+        "    # Plot results\n",
+        "    fig = plot_comparison_results(nls_comparison, title=f\"{ticker} Call Options: NLS Model Comparison\")\n",
+        "    plt.show()\n",
+        "else:\n",
+        "    print(\"No valid options found for comparison\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Combined comparison: Market vs Black-Scholes vs NLS\n",
+        "if len(bs_comparison) > 0 and len(nls_comparison) > 0:\n",
+        "    # Merge dataframes\n",
+        "    comparison = bs_comparison[['strike', 'marketPrice', 'bsPrice', 'bsError', 'bsErrorPct']].copy()\n",
+        "    comparison['nlsPrice'] = nls_comparison['nlsPrice'].values\n",
+        "    comparison['nlsError'] = nls_comparison['nlsError'].values\n",
+        "    comparison['nlsErrorPct'] = nls_comparison['nlsErrorPct'].values\n",
+        "    \n",
+        "    # Create comparison plot\n",
+        "    fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
+        "    \n",
+        "    # Price comparison\n",
+        "    axes[0].scatter(comparison['strike'], comparison['marketPrice'], \n",
+        "                   alpha=0.7, label='Market Price', s=80, color='black')\n",
+        "    axes[0].scatter(comparison['strike'], comparison['bsPrice'], \n",
+        "                   alpha=0.6, label='Black-Scholes', s=60, marker='x', color='blue')\n",
+        "    axes[0].scatter(comparison['strike'], comparison['nlsPrice'], \n",
+        "                   alpha=0.6, label='NLS Model', s=60, marker='^', color='red')\n",
+        "    axes[0].set_xlabel('Strike Price ($)', fontsize=12)\n",
+        "    axes[0].set_ylabel('Option Price ($)', fontsize=12)\n",
+        "    axes[0].set_title(f'{ticker} Call Options: Model Comparison', fontsize=14)\n",
+        "    axes[0].legend()\n",
+        "    axes[0].grid(True, alpha=0.3)\n",
+        "    \n",
+        "    # Error comparison\n",
+        "    axes[1].scatter(comparison['strike'], comparison['bsErrorPct'], \n",
+        "                   alpha=0.6, label='Black-Scholes Error', s=60, marker='x', color='blue')\n",
+        "    axes[1].scatter(comparison['strike'], comparison['nlsErrorPct'], \n",
+        "                   alpha=0.6, label='NLS Error', s=60, marker='^', color='red')\n",
+        "    axes[1].axhline(y=0, color='k', linestyle='--', linewidth=1)\n",
+        "    axes[1].set_xlabel('Strike Price ($)', fontsize=12)\n",
+        "    axes[1].set_ylabel('Percentage Error (%)', fontsize=12)\n",
+        "    axes[1].set_title('Error Comparison', fontsize=14)\n",
+        "    axes[1].legend()\n",
+        "    axes[1].grid(True, alpha=0.3)\n",
+        "    \n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "    \n",
+        "    # Print summary statistics\n",
+        "    print(\"\\n\" + \"=\"*60)\n",
+        "    print(\"COMPARISON SUMMARY\")\n",
+        "    print(\"=\"*60)\n",
+        "    print(f\"\\nBlack-Scholes:\")\n",
+        "    print(f\"  MAE: ${comparison['bsError'].abs().mean():.4f}\")\n",
+        "    print(f\"  RMSE: ${np.sqrt((comparison['bsError']**2).mean()):.4f}\")\n",
+        "    print(f\"  Mean % Error: {comparison['bsErrorPct'].abs().mean():.2f}%\")\n",
+        "    \n",
+        "    print(f\"\\nNLS Model:\")\n",
+        "    print(f\"  MAE: ${comparison['nlsError'].abs().mean():.4f}\")\n",
+        "    print(f\"  RMSE: ${np.sqrt((comparison['nlsError']**2).mean()):.4f}\")\n",
+        "    print(f\"  Mean % Error: {comparison['nlsErrorPct'].abs().mean():.2f}%\")\n",
+        "    print(\"=\"*60)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Part 6: Discussion and Conclusions\n",
         "\n",
         "### Key Findings\n",
